# NanoRtti

./: .clang-format  Build.py  CMakeLists.txt  LICENSE  README.md  azure-pipelines.yml
Include/NanoRtti/: NanoRtti.hpp
Include/NanoRtti/Detail/: Detail.hpp
Test/: CMakeLists.txt  Test.cpp
